// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Tooltip Generic Tooltip 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 15.625rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 12.5rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 3rem;
}

.emotion-3 {
  background: transparent;
}

.emotion-3 .tippy-content {
  color: white;
  background-color: #0f0f17;
  max-width: 16rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 110%;
  border-radius: 0.5rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-3 .tippy-arrow {
  color: #0f0f17;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-5:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-6 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: .25;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-24 {
  background: transparent;
}

.emotion-24 .tippy-content {
  color: white;
  background-color: transparent;
  max-width: 16rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 110%;
  border-radius: 0.5rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-24 .tippy-arrow {
  color: transparent;
}

.emotion-29 {
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
  background: white;
  border-radius: 0.25rem;
}

.emotion-30 {
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  font-weight: 500;
  height: 200px;
}

.emotion-31 {
  margin-bottom: 0.5rem;
  color: black;
}

.emotion-32 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: #e8fcf7;
  color: black;
  border: 0.0625rem solid #1ad1a3;
  cursor: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-32:hover:not(:disabled) {
  background: #d1faf0;
}

.emotion-32:focus-visible:not(:disabled) {
  outline: none;
}

.emotion-32>:not(:last-child) {
  margin-right: 0.25rem;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <h2>
        Tooltip with text-only content
      </h2>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
          interactive={false}
          interactiveDebounce={100}
          placement="left"
        >
          <div
            className="emotion-4"
          >
            <button
              className="emotion-5"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                >
                  <span>
                    Left
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div>
          By hovering here you can see very long and useful info that totally breaks into two lines
        </div>
        <div
          className="emotion-3"
          interactive={false}
          interactiveDebounce={100}
          placement="right"
        >
          <div
            className="emotion-4"
          >
            <button
              className="emotion-5"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                >
                  <span>
                    Right
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div>
          By hovering here you can see very long and useful info that totally breaks into two lines
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
          interactive={false}
          interactiveDebounce={100}
          placement="top"
        >
          <div
            className="emotion-4"
          >
            <button
              className="emotion-5"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                >
                  <span>
                    Top
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div>
          By hovering here you can see very long and useful info that totally breaks into two lines
        </div>
        <div
          className="emotion-3"
          interactive={false}
          interactiveDebounce={100}
          placement="bottom"
        >
          <div
            className="emotion-4"
          >
            <button
              className="emotion-5"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                >
                  <span>
                    Bottom
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div>
          By hovering here you can see very long and useful info that totally breaks into two lines
        </div>
      </div>
      <h2>
        Tooltip with component content
      </h2>
      <div
        className="emotion-24"
        interactive={false}
        interactiveDebounce={100}
        placement="right"
      >
        <div
          className="emotion-4"
        >
          <button
            className="emotion-5"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-6"
            >
              <span
                className="emotion-7"
              >
                <span>
                  Right
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
      <div>
        <div
          className="emotion-29"
        >
          <div
            className="emotion-30"
          >
            <div
              className="emotion-31"
            >
              By hover here you can see:
            </div>
            <div
              aria-readonly="true"
              className="emotion-32"
              data-testid="chip"
            >
              <div>
                <a
                  href="/"
                >
                  Go to homepage
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Tooltip Tooltip sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  background: transparent;
}

.emotion-2 .tippy-content {
  color: white;
  background-color: #0f0f17;
  max-width: 16rem;
  padding: 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 110%;
  border-radius: 0.5rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-2 .tippy-arrow {
  color: #0f0f17;
}

.emotion-3 {
  background: transparent;
}

.emotion-3 .tippy-content {
  color: white;
  background-color: #0f0f17;
  max-width: 16rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 110%;
  border-radius: 0.5rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-3 .tippy-arrow {
  color: #0f0f17;
}

.emotion-4 {
  background: transparent;
}

.emotion-4 .tippy-content {
  color: white;
  background-color: #0f0f17;
  max-width: 16rem;
  padding: 0.5rem;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 110%;
  border-radius: 0.5rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-4 .tippy-arrow {
  color: #0f0f17;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          interactive={false}
          interactiveDebounce={100}
          placement="right"
        >
          <button>
            Large
          </button>
        </div>
        <div>
          By hover here you can see useful info
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
          interactive={false}
          interactiveDebounce={100}
          placement="right"
        >
          <button>
            Medium
          </button>
        </div>
        <div>
          By hover here you can see useful info
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-4"
          interactive={false}
          interactiveDebounce={100}
          placement="right"
        >
          <button>
            Small
          </button>
        </div>
        <div>
          By hover here you can see useful info
        </div>
      </div>
    </div>
  </div>
</div>
`;
